[-] * Better parse ATI replies from Samsung (bug #806).
[-] * Better parse CSQ replies from Samsung (bug #806).
[-] * Add small delays to SMS sending/saving (bug #794).
[+] * SMSD monitor can now run for configured number of loops.
[+] * Added DBI backend for SMSD, so we now support wide range of databases.
[-] * SMSD does not delete SMS from phone when it's saving has failed.
    
20090126 - 1.22.92

[-] * Fixed getting of network name from saved message.
[-] * Fixed encoding of text to some encodings in AT engine.
[-] * Detect more Siemens CME error codes.
[-] * Windows binary is again with MySQL support.
[+] * Initial native support for Motorola phonebook (bug #748).
[+] * Use getpass if available for PIN code prompt.
[-] * Fixed parsing of phone number from incoming calls.
[-] * Added ID for Nokia 1112.
[-] * Dropped obsolete packaging/debian and point users to proper packages.
[-] * Fix crash when operator logo is empty.
[-] * Fix memory leak in SMS backup.
[-] * Fixed processing of SMSD outbox with PostgreSQL (bug #803).
[-] * Automatic detection of lib64 directory for installation.
[+] * Allow separate installation of some components on Windows.
    
20090116 - 1.22.91

[-] * Fixed setting remote number for SMS in some cases.
[-] * Fixed compilation under cygwin.
[-] * Externalize eventlog support to ease Cygwin compilation.
[!] * Integrate python-gammu into Gammu, they are anyway bound quite
      tightly together.
[!] * Python C module is now gammu._gammu and not gammu.Core.
[+] * Introduce testing for python module.
[-] * Fixed decoding of formatted EMS messages.
[-] * Fixed reading of RTTL ringtones.
[-] * Fixed crash with too many animation frames.
[-] * Fixed possible crash in LMB writer.
[-] * Fixed several memory leaks.
[+] * Better support for Samsung phones (bug #790).
[-] * Fixed Windows Service Startup (bug #451).
[+] * New possibility to run more instances of Windows Service (bug #451).
    
20090109 - 1.22.90
