@@ -202,6 +202,12 @@ development.
 Path, where DBI drivers are stored, this usually does not have to be set if
 you have properly installed drivers.
 
+.TP
+.BI DBDir
+
+Database directory for some (currently only sqlite) DBI drivers. Set here path
+where sqlite database files are stored.
+
 .SS Files backend options
 
 The FILES backend accepts following configuration options. See
