@@ -63,7 +63,7 @@ struct _GSM_SMSDConfig {
 #if defined(HAVE_MYSQL_MYSQL_H) || defined(HAVE_POSTGRESQL_LIBPQ_FE_H) || defined(LIBDBI_FOUND)
 	/* options for SQL database */
 	const char	*database,	 *user,		*password;
-	const char	*driver, *driverspath;
+	const char	*driver, *driverspath, *dbdir;
 	const char	*PC,		 *skipsmscnumber;
         char 		DT[20];
 	char		CreatorID[200];
