@@ -38,6 +38,7 @@ ChangeLog
 [+] * SMSD monitor can now run for configured number of loops.
 [+] * Added DBI backend for SMSD, so we now support wide range of databases.
 [-] * SMSD does not delete SMS from phone when it's saving has failed.
+[+] * Added SQL structure for sqlite, which can be used through DBI.
     
 20090126 - 1.22.92
 
